@@ -60,8 +60,8 @@ public class ConfigurationValidator
                     if (binding instanceof ProviderInstanceBinding) {
                         ProviderInstanceBinding<?> providerInstanceBinding = (ProviderInstanceBinding<?>) binding;
                         Provider<?> provider = providerInstanceBinding.getProviderInstance();
-                        if (provider instanceof ConfigurationProvider) {
-                            ConfigurationProvider<?> configurationProvider = (ConfigurationProvider<?>) provider;
+                        if (provider instanceof ConfigurationAwareProvider) {
+                            ConfigurationAwareProvider<?> configurationProvider = (ConfigurationAwareProvider<?>) provider;
                             // give the provider the configuration factory
                             configurationProvider.setConfigurationFactory(configurationFactory);
                             configurationProvider.setWarningsMonitor(warningsMonitor);
